--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
     font-size: 16px;
 }
 
+.nav-item {
+    margin-left: 10px;
+}
+
 .badge-secondary:hover {
     background: #61dafb;
 }
@@ -26,6 +30,10 @@ body {
 
 .fa-plus:hover {
     color: red;
+}
+
+.fa-language:hover {
+    color: white;
 }
 
 .fa-minus:hover {
@@ -71,7 +79,7 @@ body {
 
 .rating > i:hover:before,
 .rating > i:hover ~ i:before {
-    color: red;
+    color: gold;
 }
 
 .react-tags {
@@ -193,6 +201,13 @@ body {
     cursor: auto;
 }
 
+.file-upload {
+    position: relative;
+    height: 100px;
+    width: 100%;
+    display: none;
+}
+
 .file-drop {
     position: relative;
     height: 100px;
@@ -204,7 +219,7 @@ body {
     top: 0;
     left: 0;
     height: 100%;
-    width: 100%;
+    width: auto;
     border-radius: 2px;
 
     display: flex;
