--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
     font-size: 16px;
 }
 
+.table-user {
+    min-width: 100%;
+    border-spacing: 15px;
+    border-collapse: separate;
+}
+
 .nav-item {
     margin-left: 10px;
 }
